added medical search engine to portfolio

--- a/index.html
+++ b/index.html
@@ -84,6 +84,26 @@
         <header class="portfolio-header">Portfolio</header>
         <div class="container portfolio-container">
             <ul class="image-list">
+                <div class="project">
+                    <div class="project-container">
+                        <div class="project-image">
+                            <img class="project-image-container" src="images/MedicalSearchEngine.png"></img>    
+                        </div>
+                        
+                        <div class="project-description">
+                            <div class="project-description-container">
+                                <header class="project-name">Medical Search Engine</header>
+                                <span class="project-text">
+                                    Led a team in developing a full-stack search engine capable of managing and 
+                                    retrieving 9000+ documents on influenza, the common cold, and COVID-19 while
+                                    maintaining query response times under 300ms.
+                                </span>
+                                <a class="button" href="https://github.com/EinarGatc/Medical-Search-Engine">View More</a>    
+                            </div>
+                            
+                        </div>    
+                    </div>
+                </div>
 
                 <div class="project">
                     <div class="project-container">
@@ -108,6 +128,7 @@
                         </div>    
                     </div>
                 </div>
+
 
                 <div class="project">
                     <div class="project-container">
